--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ionic-native/status-bar": "~4.18.0",
     "@ionic/storage": "2.2.0",
     "angular-firebase": "^1.1.5",
+    "elasticsearch": "^15.2.0",
     "ionic-angular": "3.9.2",
     "ionicons": "4.5.0-3",
     "rxjs": "^6.3.3",
